# ntrip-atlas

./: .gitignore  .gitmodules  CHANGES_SUMMARY.md  CLAUDE.md  CROSS_VALIDATION_REPORT_2024-12-01.md  DESIGN.md  LICENSE-CODE  LICENSING.md  PROJECT_SUMMARY.md  README.md  RELEASE-v20241130.02.md  SPATIAL_INDEXING_DESIGN.md  STREAMING_INTERFACE.md  test_expanded_services  test_payment_priority  test_phase2_coverage  test_spatial_geographic
.github/workflows/: release.yml  test.yml
data/: README.md  schema.yaml
data-backup/apac/: new_zealand_linz.yaml
data-backup/global/: point_one_polaris.yaml  rtk2go.yaml
data/apac/: australia_ga.yaml
data/global/: rtk2go.yaml
examples/: esp32_streaming_example.cpp
libntripatlas/: CMakeLists.txt  Makefile  README.md
libntripatlas/examples/arduino/: library.properties
libntripatlas/examples/arduino/basic_discovery/: basic_discovery.ino
libntripatlas/include/: ntrip_atlas.h  ntrip_atlas_config.h  ntrip_coverage_bitmaps.h  ntrip_flash_storage.h
libntripatlas/src/: ntrip_compact_failures.c  ntrip_compact_services.c  ntrip_credential_management.c  ntrip_geographic_blacklist.c  ntrip_geographic_filtering.c  ntrip_gga.c  ntrip_payment_priority.c  ntrip_spatial_geographic.c  ntrip_spatial_indexing.c  ntrip_stream_parser.c  ntrip_stream_parser.h  ntrip_tiered_loading.c  ntrip_utils.c  ntrip_versioning.c
tests/: Makefile
tests/memory/: test_esp32_memory  test_esp32_memory.c
tests/unit/: test_compact_failures  test_compact_failures.c  test_compact_services  test_compact_services.c  test_credential_management  test_credential_management.c  test_database_versioning  test_database_versioning.c  test_distance  test_distance.c  test_geographic_blacklist  test_geographic_blacklist.c  test_geographic_filtering  test_geographic_filtering.c  test_german_state_cors  test_german_state_cors.c  test_payment_priority  test_payment_priority.c  test_phase2_geographic_coverage  test_phase2_geographic_coverage.c  test_spatial_geographic_integration.c  test_spatial_indexing  test_spatial_indexing.c  test_yaml_generated_services  test_yaml_generated_services.c
tools/generators/: convert_schema.py  service_database.c  spatial_index_generator.c  test_phase2  yaml_to_c.py
tools/validators/: service_validator.py
